--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 	<meta name="viewport" content="width=device-width">
 
 	<!-- Custom CSS -->
-	<link rel="stylesheet" href="/lib/css/styles.css">
+	<link rel="stylesheet" href="css/styles.css">
 	<meta name="description" content="Your daily market dose- from the female version of a hustla herself. By tech@NYU." />
 	<meta name="keywords" content="beyonce stock market today dow jones industrial average day trader" />
-		
+
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2" />
-		
+
 </head>
 <body>
 	<!--
 		TO DO: add social media, add analytics, add favicon
 	-->
-	
+
 	<ul class="grid">
 		<li class="half">
 			<div class="social-media__panel">
@@ -35,17 +35,17 @@
 			</div>
 		</li>
 	</ul>
-	
-	<p class="introduction__quote mobile__only">How's the Dow Jones, Beyoncé?</p>
-	
 
-	
+	<p class="introduction__quote mobile__only">How's the Dow Jones, Beyoncé?</p>
+
+
+
 	<div class="site">
-		
-		
-		<img src="/lib/img/shit.gif" />
-		
-	
+
+
+		<img src="img/shit.gif" />
+
+
 	</div>
 
 	<ul class="grid information__panel">
@@ -69,9 +69,9 @@
 			</footer>
 		</li>
 	</ul>
-	
 
-	<script src="/lib/js/jquery.js"></script>
-	<script src="/lib/js/app.js"></script>
+
+	<script src="js/jquery.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
