many cosmetic improvements

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 		</li>
 		<li class="half">
 			<div class="introduction__quote">
-				<i class="ion-help-circled active" data-pack="default" data-tags="question, ?"></i>
+				<a href="/"><i class="ion-help-circled active" data-pack="default" data-tags="question, ?"></i></a>
 				<div class="quote__popover">
 					<p>your daily market dose- from the female version of a hustla herself</p>
-					<p id="stock_name">.DJI Dow Jones Industrial Average</p>
+					<p class="popover__info"><span id="stock_name">.INX S&amp;P 500</span> &bull; <em class="popover__try">try any ticker symbol <a href="/aapl">AAPL</a> <a href="/amzn">AMZN</a> <a href="/fb">FB</a> <a href="/goog">GOOG</a> <a href="/msft">MSFT</a></em></p>
 				</div>
 			</div>
 		</li>
 	</ul>
 
-	<p class="introduction__quote mobile__only">How's the Dow Jones, Beyoncé?</p>
+	<p class="introduction__quote mobile__only">How's the stock market, Beyoncé?</p>
 	<div class="site">
 		<img id="beyonceImage" />
 	</div>
@@ -37,20 +37,21 @@
 	<ul class="grid information__panel">
 		<li class="half">
 			<article class="market__data">
-				<h3 id="beyonceStatus"></h3>
-				<h1 id="beyonceValue" class="shit"></h1>
+				<div class="data--main"><p id="beyonceName">S&amp;P 500</p> <h3 id="beyonceStatus"></h3></div>
+				<h1 id="beyonceValue"></h1>
 			</article>
 		</li>
 		<li class="half">
 
 			<footer class="attribution__magic">
-				<div class="attribution__tnyu">Made by your homies at <a href="http://techatnyu.org/">tech@NYU</a> <a href="http://twitter.com/techatnyu"><i class="ion-social-twitter" data-pack="social" data-tags="follow, post, share"></i></a>
+				<div class="attribution__tnyu">Made by your homies at <a href="http://techatnyu.org/" target="_blank">tech@NYU</a> <a href="http://twitter.com/techatnyu" target="_blank"><i class="ion-social-twitter" data-pack="social" data-tags="follow, post, share"></i></a>
 				</div>
 				<div class="attribution__small">
 					<a href="http://twitter.com/andrewjbryk" target="_blank">Andrew</a> and
 					<a href="http://twitter.com/tcburning/" target="_blank">Terri</a> and
+					<a href="https://twitter.com/abhiagarwal" target="_blank">Abhi</a> and
 					<a href="http://twitter.com/grungerabbit" target="_blank">Cheryl</a> &bull;
-					<a href="http://drakeweather.com/">thx</a> &bull; <a href="http://giphy.com/search/beyonce">Beyoncé gifs from Giphy</a>
+					<a href="http://drakeweather.com/" target="_blank">thx</a> &bull; <a href="http://giphy.com/search/beyonce" target="_blank">Beyoncé gifs from Giphy</a>
 				</div>
 			</footer>
 		</li>
