better js data model

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<li class="half">
 			<article class="market__data">
 				<div class="data--main"><p id="beyonceName">S&amp;P 500</p> <h3 id="beyonceStatus"></h3></div>
-				<h1 id="beyonceValue"></h1>
+				<h1 id="beyonceValue"><span id="price"></span> <span id="change"></span></h1>
 			</article>
 		</li>
 		<li class="half">
