--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="lib/css/styles.css">
 	<meta name="description" content="Your daily market dose- from the female version of a hustla herself. By tech@NYU." />
-	<meta name="keywords" content="beyonce stock market today dow jones industrial average day trader" />
+	<meta name="keywords" content="beyonce stock market today standard and poor 500 s&p 500 dow jones industrial average day trader pun" />
 	<link rel="shortcut icon" type="image/x-icon" href="http://techatnyu.org/favicon.ico" />
 </head>
 <body>
