add search function

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 				<a href="/"><i class="ion-help-circled active" data-pack="default" data-tags="question, ?"></i></a>
 				<div class="quote__popover">
 					<p>your daily market dose- from the female version of a hustla herself</p>
+					
+					<input type="text" class="ticker__changer" placeholder="type ticker here" />
 					<p class="popover__info"><span id="stock_name">.INX S&amp;P 500</span> &bull; <em class="popover__try">try any ticker symbol <a href="/aapl">AAPL</a> <a href="/amzn">AMZN</a> <a href="/fb">FB</a> <a href="/goog">GOOG</a> <a href="/msft">MSFT</a></em></p>
 				</div>
 			</div>
@@ -56,7 +58,10 @@
 			</footer>
 		</li>
 	</ul>
-	<p class="mobile__only">Try any ticker symbol <a href="/aapl">AAPL</a> <a href="/amzn">AMZN</a> <a href="/fb">FB</a> <a href="/goog">GOOG</a> <a href="/msft">MSFT</a></p>
+	<div class="changer mobile__only">
+		<input type="text" class="ticker__changer" placeholder="type ticker here" />
+		<p>Try any ticker symbol <a href="/aapl">AAPL</a> <a href="/amzn">AMZN</a> <a href="/fb">FB</a> <a href="/goog">GOOG</a> <a href="/msft">MSFT</a></p>
+	</div>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="lib/js/app.js"></script>
 	
