new like+share, done!

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	<link rel="stylesheet" href="lib/css/styles.css">
 	<meta name="description" content="Your daily market dose- from the female version of a hustla herself. By tech@NYU." />
 	<meta name="keywords" content="beyonce stock market today standard and poor 500 s&p 500 dow jones industrial average day trader pun" />
+	<meta property="og:image" content="http://beyoncetrader.com/lib/img/great.gif" />
 	<link rel="shortcut icon" type="image/x-icon" href="http://techatnyu.org/favicon.ico" />
 </head>
 <body>
 	<ul class="grid">
 		<li class="half">
 			<div class="social-media__panel">
-		    	<div class="fb-like" data-href="https://www.facebook.com/TechatNYU" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><br>
-		    	<a href="https://twitter.com/TechatNYU" class="twitter-follow-button" data-show-count="false">Follow @TechatNYU</a>
+		    	<div class="fb-like" data-href="http://beyoncetrader.com/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div><br>
+				<a href="https://twitter.com/share" class="twitter-share-button" data-text="How's the stock market, Beyoncé?" data-via="techatnyu" data-related="techatnyu" data-hashtags="beyoncetrader">Tweet</a>
 		    </div>
 		</li>
 		<li class="half">
