--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<ul class="grid">
 		<li class="half">
 			<div class="social-media__panel">
-				<p>SOCIAL MEDIA HERE</p>
+				<p>SOCIAL MEDIA </p>
 			</div>
 		</li>
 		<li class="half">
